--- a/modules/system/assets/ui/less/tab.less
+++ b/modules/system/assets/ui/less/tab.less
@@ -15,7 +15,7 @@
 @color-scroll-indicator:                     #bbbbbb;
 
 @color-tab-border:                           #ECF0F1;
-@color-tab-inactive-text:                    #cccccc;
+@color-tab-inactive-text:                    #bbbbbb;
 @color-tab-active-text:                      @color-text-title;
 @color-tab-active-border:                    #DBE1E3;
 @color-tab-bg:                               #ffffff;
