--- a/modules/system/assets/ui/less/utilities.less
+++ b/modules/system/assets/ui/less/utilities.less
@@ -32,7 +32,7 @@
 // Typography
 // --------------------------------------------------
 
-.t-ww { word-wrap: break-word; }
+.t-ww { word-wrap: break-word; word-break: break-word; }
 
 //
 // Positioning
